--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -3,30 +3,23 @@ productName: Nebula Downloader
 directories:
   buildResources: build
 files:
-  - '!**/.vscode/*'
-  - '!src/*'
-  - '!bin/*'
-  - '!bin/**/*'
-  - '!electron.vite.config.{js,ts,mjs,cjs}'
-  - '!{.eslintcache,eslint.config.mjs,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}'
-  - '!{.env,.env.*,.npmrc,pnpm-lock.yaml}'
-  - '!{tsconfig.json,tsconfig.node.json,tsconfig.web.json}'
-# Bundle ffmpeg from resources/bin (yt-dlp is downloaded on first run)
+  - 'out'
+  - 'package.json'
+  - 'node_modules/**/*'
+  - 'resources/**/*'
 
 asarUnpack:
   - resources/**
+
 win:
-  extraResources:
-    - from: resources/bin
-      to: bin
-      filter:
-        - 'ffmpeg.exe'
   executableName: NebulaDownloader
+
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
   uninstallDisplayName: ${productName}
   createDesktopShortcut: always
+
 mac:
   entitlementsInherit: build/entitlements.mac.plist
   extendInfo:
@@ -35,22 +28,21 @@ mac:
     - NSDocumentsFolderUsageDescription: Application requests access to the user's Documents folder.
     - NSDownloadsFolderUsageDescription: Application requests access to the user's Downloads folder.
   notarize: false
+
 dmg:
   artifactName: ${name}-${version}.${ext}
+
 linux:
-  extraResources:
-    - from: resources/bin
-      to: bin
-      filter:
-        - 'ffmpeg'
   target:
     - AppImage
     - snap
     - deb
   maintainer: Nebula Team
   category: Utility
+
 appImage:
   artifactName: ${name}-${version}.${ext}
+
 npmRebuild: false
 # GitHub Releases for auto-updates (update owner/repo before first release)
 publish:
