--- a/package.json
+++ b/package.json
@@ -15,25 +15,30 @@
     "dev": "electron-vite dev",
     "build": "npm run typecheck && electron-vite build",
     "postinstall": "electron-builder install-app-deps",
-    "build:unpack": "npm run build && electron-builder --dir",
-    "build:win": "npm run build && electron-builder --win",
-    "build:mac": "electron-vite build && electron-builder --mac",
-    "build:linux": "electron-vite build && electron-builder --linux",
+    "build:unpack": "npm run build && npm prune --production && electron-builder --dir && npm install",
+    "build:win": "npm run build && npm prune --production && electron-builder --win && npm install",
+    "build:mac": "npm run build && npm prune --production && electron-builder --mac && npm install",
+    "build:linux": "npm run build && npm prune --production && electron-builder --linux && npm install",
     "rebuild": "electron-rebuild -f -w better-sqlite3"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
-    "lowdb": "^7.0.1"
+    "adm-zip": "^0.5.16",
+    "lowdb": "^7.0.1",
+    "tar-fs": "^3.1.1"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
     "@electron-toolkit/eslint-config-ts": "^3.1.0",
     "@electron-toolkit/tsconfig": "^2.0.0",
+    "@types/adm-zip": "^0.5.7",
     "@types/node": "^22.19.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@types/tar-fs": "^2.0.4",
     "@vitejs/plugin-react": "^5.1.1",
+    "autoprefixer": "^10.4.22",
     "electron": "^39.2.6",
     "electron-builder": "^26.0.12",
     "electron-vite": "^5.0.0",
@@ -41,13 +46,12 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "postcss": "^8.5.6",
     "prettier": "^3.7.4",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
-    "typescript": "^5.9.3",
-    "vite": "^7.2.6",
     "tailwindcss": "^3.4.1",
-    "postcss": "^8.5.6",
-    "autoprefixer": "^10.4.22"
+    "typescript": "^5.9.3",
+    "vite": "^7.2.6"
   }
 }
