--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "adm-zip": "^0.5.16",
-    "lowdb": "^7.0.1",
+    "better-sqlite3": "^12.6.2",
     "tar-fs": "^3.1.1"
   },
   "devDependencies": {
@@ -33,6 +33,7 @@
     "@electron-toolkit/eslint-config-ts": "^3.1.0",
     "@electron-toolkit/tsconfig": "^2.0.0",
     "@types/adm-zip": "^0.5.7",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^22.19.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
