feat: Implement comprehensive unit and E2E testing with Vitest and Playwright, establish CI/CD, and refine dependency download mirrors and version fetching error handling.

--- a/.gitignore
+++ b/.gitignore
@@ -86,14 +86,11 @@ designs/
 ffmpeg-win.zip
 ffmpeg-linux.tar.xz
 
-# Helper scripts (development only)
-scripts/
-
 # Text dumps
-*.txt
-
-# Tests
-tests/
+branch_*.txt
+git_*.txt
+test-thumb.js
+merge_output.txt
 
 # Temp media files
 *.part
