chore: Simplify build scripts by removing redundant `npm prune --production` and `npm install` commands.

--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "dev": "electron-vite dev",
     "build": "npm run typecheck && electron-vite build",
     "postinstall": "electron-builder install-app-deps",
-    "build:unpack": "npm run build && npm prune --production && electron-builder --dir && npm install",
-    "build:win": "npm run build && npm prune --production && electron-builder --win && npm install",
-    "build:mac": "npm run build && npm prune --production && electron-builder --mac && npm install",
-    "build:linux": "npm run build && npm prune --production && electron-builder --linux && npm install",
+    "build:unpack": "npm run build && electron-builder --dir",
+    "build:win": "npm run build && electron-builder --win",
+    "build:mac": "npm run build && electron-builder --mac",
+    "build:linux": "npm run build && electron-builder --linux",
     "rebuild": "electron-rebuild -f -w better-sqlite3",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
