--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,8 @@ jobs:
     - name: Run Unit & Integration Tests (Vitest)
       run: npx vitest run --coverage
       
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
+    - name: Install Playwright OS Dependencies
+      run: npx playwright install-deps
       
     - name: Build Electron App (for E2E)
       run: npm run build:linux
