--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,51 +2,51 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ['main']
   pull_request:
-    branches: [ "main" ]
+    branches: ['main']
 
 jobs:
   test:
     name: Build & Test
     runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Use Node.js 20.x
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20.x'
-        cache: 'npm'
-        
-    - name: Install Dependencies
-      run: npm ci
 
-    - name: Lint Code
-      run: npm run lint
-      
-    - name: Type Check
-      run: npm run typecheck
-      
-    - name: Run Unit & Integration Tests (Vitest)
-      run: npx vitest run --coverage
-      
-    - name: Install Playwright OS Dependencies
-      run: npx playwright install-deps
-      
-    - name: Build Electron App (for E2E)
-      run: npm run build:linux
-      env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
-    - name: Run E2E Tests (Playwright)
-      run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" npx playwright test
-      
-    - name: Upload Test Results
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 14
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Use Node.js 20.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          cache: 'npm'
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Lint Code
+        run: npm run lint
+
+      - name: Type Check
+        run: npm run typecheck
+
+      - name: Run Unit & Integration Tests (Vitest)
+        run: npx vitest run --coverage
+
+      - name: Install Playwright OS Dependencies
+        run: npx playwright install-deps
+
+      - name: Build Electron App (for E2E)
+        run: npm run build:linux
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Run E2E Tests (Playwright)
+        run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" npx playwright test
+
+      - name: Upload Test Results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 14
