--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nebula-downloader",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Nebula Downloader - A powerful and sleek video downloader",
   "main": "./out/main/index.js",
   "author": "Nebula Team",
@@ -19,6 +19,7 @@
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "npm run build && electron-builder --mac",
     "build:linux": "npm run build && electron-builder --linux",
+    "preview:linux": "npm run build && electron-builder --linux --dir",
     "rebuild": "electron-rebuild -f -w better-sqlite3",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
